--- a/gb/24/6/18/n14272373.md
+++ b/gb/24/6/18/n14272373.md
@@ -29,33 +29,33 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271737.md#1">“现金不会崩溃” 专家：几十年内仍会存在</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271784.md#1">李强访澳：中国将对澳洲实行单方面免签</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271896.md#1">联邦议员7月加薪 总理年薪将涨至60.75万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272284.md#1">新州财案：赤字36亿 无额外生活补贴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272281.md#1">数年来最冷早晨 澳洲多地出现冰点以下低温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14310041.md#1">多家机构吁昆州政府落实10年筹资修路计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310045.md#1">报告：澳洲富人更富?财富GDP占比20年增两倍</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/29/n10006546.md#1" target="_blank">坚持共产体制推改革 波共前书记被轰下台</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/20/n10576459.md#1" target="_blank">晓明：桂林“文革”运动的回忆与思考</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/15/n9040079.md#1" target="_blank">【细语人生】见证大法的神奇（5）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14268821.md#1">濒死游历天堂 英女透露人类将有大事发生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/27/n14167911.md#1">一段婆媳情让她人生遇转机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267369.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（上）活捉外星人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269975.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（下）医院惊魂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264735.md#1">康熙皇帝和《红楼梦》（三）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272001.md#1">【未解之谜】细思极恐 AI接管人类倒计时？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271048.md#1">【新闻看点】劝捐器官不成 传武汉医院拔管致人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271050.md#1">【菁英论坛】北京权争投影仪 贵州官场大塌方</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271028.md#1">沈舟：中共若开战 海军可能最先输光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269868.md#1">美福特号航母为何令中共福建舰难望项背</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270527.md#1">6月在Costco买九种商品 应景又超值</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270666.md#1">分享80多岁外婆抗癌成功 白家绮直言一治愈要点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271019.md#1">林青霞为台湾清大毕业生致词 家长比学生还兴奋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270612.md#1">因杜琪峯一句话决心减肥 港星林雪：减了10kg</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271038.md#1">泰勒丝巡演进入第100场 宣布12月结束</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271052.md#1">“灭火器”乐团：爱台湾就别怕被抹黑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262442.md#1">寒湿重易生病 中医授怎样吃避免寒从口入</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271835.md#1">这一物可以让脏袜子变白 非白醋或小苏打粉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262443.md#1">中医师：爱吃水果易致寒湿体质 三类人宜戒口</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271011.md#1">西瓜是“天生白虎汤” 夏季解毒良药</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269880.md#1">加国亚省班芙公园梦莲湖 上榜世界最美湖泊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308276.md#1">珍珠粉有助延缓衰老 改善睡眠 预防骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/18/n14272373.htm">澳洲1%高收入者承担近两成个税</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272373.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
